--- a/Alexsandra/Aula 03/Receita Manjar de Coco.html
+++ b/Alexsandra/Aula 03/Receita Manjar de Coco.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estiloreceita.css">
     <title>Receita de Manjar de Coco</title>
+
+    <link rel="stylesheet" href="espacamentormanjar.css">
 </head>
 <body>
     <h1>Manjar de Coco</h1>
     <br>
     <p>Uma sobremesa muito tradicional da culinária brasileira: confira como fazer manjar de coco! A receita de manjar leva apenas 5 ingredientes e é muito simples de fazer </p>
     <br>
-    <img src="https://bing.com/th?id=OSK.f7111557eef94383374a191fb29a0cb4" alt="width="600" >
+    <img class="imagem-fisica" src="https://bing.com/th?id=OSK.f7111557eef94383374a191fb29a0cb4" alt="width="600" >
 
     <h1>Ingredientes</h1>
 <ol>
@@ -20,9 +22,7 @@
     <li>1 vidro pequeno de leite de coco; </li>
     <li>100 g de coco ralado;</li>
     <li>6 colheres de amido de milho;</li>
-    <li> 8 colheres de açúcar</li>   
-
-</ol>
+    <li> 8 colheres de açúcar</li>   </ol>
 
     <h1>Modo de Preparo</h1>
     <ul>
